fix: Resueltos problemas de proxy y anotaciones @Transactional en servicios